Added docker-compose to requirements file. So it will be installed in docker container and be executable by jenkins. Removed an error log.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
 django-taggit==0.22.2
 django-taggit-serializer
+docker-compose
 flake8
 idna==2.6
 itypes==1.1.0
